--- a/NGenieBack/Client/src/app/article/article.component.html
+++ b/NGenieBack/Client/src/app/article/article.component.html
@@ -1,8 +1,8 @@
 <div class="flex justify-center items-stretch self-stretch min-h-screen mx-4">
-    <mat-tab-group class="w-full">
+    <mat-tab-group class="w-full" animationDuration="0.1">
         <mat-tab label="Текст">
             <div class=" ring ring-slate-400 rounded-md m-2 p-2">
-                <textarea class="bg-transparent hw-full h-screen" matInput [(ngModel)]="markdown"></textarea>
+                <textarea class="bg-transparent hw-full h-screen w-full focus:outline-none active:outline-none" mat [(ngModel)]="markdown"></textarea>
             </div>
         </mat-tab>
         <mat-tab label="Просмотр">
