--- a/NGenieBack/ng-client/src/app/document/document.component.html
+++ b/NGenieBack/ng-client/src/app/document/document.component.html
@@ -23,21 +23,20 @@
         </nz-breadcrumb-item>
     </nz-breadcrumb>
     <div class="relative w-full px-6 py-12 bg-white shadow-xl shadow-slate-700/10 ring-1 ring-gray-900/5 md:max-w-3xl md:mx-auto lg:max-w-4xl lg:pt-16 lg:pb-28">
-
-        <button nz-button nzType="primary" [nzSize]="'large'" nzShape="circle" class="float-right sticky top-11" >
-            <span *ngIf="editMode" (click)="toggleEdit()" nz-icon nzType="edit" nzTheme="outline"></span>
-            <span *ngIf="!editMode" (click)="toggleEdit()" nz-icon nzType="file-text" nzTheme="outline"></span>
+        <button (click)="toggleEdit()" nz-button nzType="primary" [nzSize]="'large'" nzShape="circle" class="float-right sticky top-11" >
+            <span *ngIf="editMode" nz-icon nzType="edit" nzTheme="outline"></span>
+            <span *ngIf="!editMode" nz-icon nzType="file-text" nzTheme="outline"></span>
         </button>
         <!-- Редактор -->
         <div *ngIf="editMode" class="max-w-prose mx-auto lg:text-lg">
-            <textarea [(ngModel)]="markdown" nz-input class="w-full min-h-screen"> 
+            <textarea [(ngModel)]="markdown" nz-input class="w-full min-h-screen resize-none overflow-clip"> 
             </textarea>
         </div>
         <!-- Документ -->
         <div *ngIf="!editMode" class="max-w-prose mx-auto lg:text-lg">
             <app-user-badge></app-user-badge>
-            <article [innerHTML]="html" class="prose mt-3">
-
+            <article class="mt-3 my-prose prose">
+                <markdown katex emoji mermaid [data]="markdown"></markdown>
             </article>
         </div>
     </div>
