--- a/NGenieBack/ng-client/src/app/navbar/navbar.component.html
+++ b/NGenieBack/ng-client/src/app/navbar/navbar.component.html
@@ -1,8 +1,8 @@
   <div>
-    <div class="bg-white flex-row flex place-items-end z-50 sticky top-0 flex-wrap w-full px-6">
+    <div class="bg-white flex-row flex items-end z-50 sticky top-0 w-full px-6">
       <p class="flex-none text-black text-2xl mb-3">Название сайта</p>
       <div class="flex-1">
-        <ul nz-menu nzMode="horizontal" class="hidden sm:inline-flex">
+        <ul nz-menu nzMode="horizontal" class="hidden sm:block ">
           <li nz-menu-item nzSelected>
             Предметы
           </li>
