--- a/NGenieBack/ng-client/src/styles.css
+++ b/NGenieBack/ng-client/src/styles.css
@@ -1,16 +1,12 @@
-@tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 
-.my-prose {
-    @apply prose;
-    @apply prose-code:before:content-none;
-    @apply prose-code:after:content-none;
-    @apply prose-code:bg-gray-50; 
-    @apply prose-code:py-0.5;
-    @apply prose-code:px-1;
-    @apply prose-code:rounded-md;
+
+.prose div svg{
+    @apply outline-2 rounded-sm outline-slate-200 my-2;
 }
+
+
 
 
