--- a/NGenieBack/ng-client/src/app/document/document.component.html
+++ b/NGenieBack/ng-client/src/app/document/document.component.html
@@ -1,74 +1,83 @@
-<div class="">
-    <nz-breadcrumb class="my-5 mx-6 text-black" nzSeparator=">">
-        <nz-breadcrumb-item class="">
-            <span class="inline-block" nz-icon nzType="home"></span>
-        </nz-breadcrumb-item>
-        <nz-breadcrumb-item class="c">
-            <span
-                class="whitespace-nowrap inline-block overflow-ellipsis max-w-xs overflow-hidden hover:max-w-none -mb-1.5">
-                Новые технологии в разработке программных систем
-            </span>
-        </nz-breadcrumb-item>
-        <nz-breadcrumb-item>
-            <span
-                class="whitespace-nowrap inline-block overflow-ellipsis max-w-xs overflow-hidden hover:max-w-none -mb-1.5">
-                Модуль 1
-            </span>
-        </nz-breadcrumb-item>
-        <nz-breadcrumb-item>
-            <span
-                class="whitespace-nowrap inline-block overflow-ellipsis max-w-xs overflow-hidden hover:max-w-none -mb-1.5">
-                Задача 1
-            </span>
-        </nz-breadcrumb-item>
-    </nz-breadcrumb>
+<nz-breadcrumb class="my-5 mx-6 text-black" nzSeparator=">">
+    <nz-breadcrumb-item class="">
+        <span class="inline-block" nz-icon nzType="home"></span>
+    </nz-breadcrumb-item>
+    <nz-breadcrumb-item class="c">
+        <span
+            class="whitespace-nowrap inline-block overflow-ellipsis max-w-xs overflow-hidden hover:max-w-none -mb-1.5">
+            Новые технологии в разработке программных систем
+        </span>
+    </nz-breadcrumb-item>
+    <nz-breadcrumb-item>
+        <span
+            class="whitespace-nowrap inline-block overflow-ellipsis max-w-xs overflow-hidden hover:max-w-none -mb-1.5">
+            Модуль 1
+        </span>
+    </nz-breadcrumb-item>
+    <nz-breadcrumb-item>
+        <span
+            class="whitespace-nowrap inline-block overflow-ellipsis max-w-xs overflow-hidden hover:max-w-none -mb-1.5">
+            Задача 1
+        </span>
+    </nz-breadcrumb-item>
+</nz-breadcrumb>
 
-    <div *ngIf="!editMode" class="relative w-full px-6 py-12 bg-white shadow-xl shadow-slate-700/10 ring-1 ring-gray-900/5 md:max-w-3xl md:mx-auto lg:max-w-4xl lg:pt-16 lg:pb-28">
-        <button (click)="toggleEdit()" nz-button nzType="primary" [nzSize]="'large'" nzShape="circle" class="float-right sticky top-11" >
-            <span *ngIf="editMode" nz-icon nzType="edit" nzTheme="outline"></span>
-            <span *ngIf="!editMode" nz-icon nzType="file-text" nzTheme="outline"></span>
-        </button>
-        <div class="flex">
-            <!-- Редактор -->
-            <!-- Документ -->
-            <div class="max-w-prose mx-auto lg:text-lg">
-                <app-user-badge></app-user-badge>
-                <article class="mt-3 my-prose prose">
-                    <markdown katex emoji mermaid [data]="markdown"></markdown>
-                </article>
-            </div>
-        </div>
-    </div>
-
-    <div class="flex" *ngIf="editMode">
+<div *ngIf="false"
+    class="relative w-full px-6 py-12 bg-white shadow-xl shadow-slate-700/10 ring-1 ring-gray-900/5 md:max-w-3xl md:mx-auto lg:max-w-4xl lg:pt-16 lg:pb-28">
+    <button (click)="toggleEdit()" nz-button nzType="primary" nzSize="large" nzShape="circle"
+        class="float-right sticky top-11">
+        <span *ngIf="editMode" nz-icon nzType="edit" nzTheme="outline"></span>
+        <span *ngIf="!editMode" nz-icon nzType="file-text" nzTheme="outline"></span>
+    </button>
+    <div class="flex">
         <!-- Редактор -->
-        <div class="mx-auto lg:text-lg">
-            <textarea [(ngModel)]="markdown" nz-input class="min-h-screen p-4 resize-none overflow-clip"> 
-            </textarea>
-        </div>
-        <div class="h-screen max-h-screen relative w-full px-6 py-12 bg-white shadow-xl shadow-slate-700/10 ring-1 ring-gray-900/5 md:max-w-3xl md:mx-auto lg:max-w-4xl lg:pt-16 lg:pb-28">
-            <button (click)="toggleEdit()" nz-button nzType="primary" [nzSize]="'large'" nzShape="circle" class="float-right sticky top-11" >
-                <span *ngIf="editMode" nz-icon nzType="edit" nzTheme="outline"></span>
-                <span *ngIf="!editMode" nz-icon nzType="file-text" nzTheme="outline"></span>
-            </button>
-            <div class="flex relative">
-                <div class="absolute w-100 h-100">
-
-                <div class="max-w-prose mx-auto lg:text-lg">
-                    <app-user-badge></app-user-badge>
-                    <article class="mt-3 my-prose prose max-h-screen">
-                        <markdown katex emoji mermaid [data]="markdown"></markdown>
-                    </article>
-                </div>
-                </div>
-                <!-- Документ -->
-<!--                 <div class="max-w-prose mx-auto lg:text-lg">
-                    <app-user-badge></app-user-badge>
-                    <article class="mt-3 my-prose prose max-h-screen">
-                        <markdown katex emoji mermaid [data]="markdown"></markdown>
-                    </article>
-                </div> -->
-            </div>
+        <!-- Документ -->
+        <div class="max-w-prose mx-auto lg:text-lg">
+            <app-user-badge></app-user-badge>
+            <article class="mt-3 my-prose prose">
+                <markdown katex emoji mermaid [data]="markdown"></markdown>
+            </article>
         </div>
     </div>
+</div>
+
+<div class="flex flex-col md:flex-row h-full py-4 gap-2 xl:gap-4">
+    <!-- Кнопочки -->
+    <div class="bg-white h-fit p-2 rounded-tr-2xl rounded-br-2xl flex flex-grow-0 w-fit md:flex-col gap-1">
+        <button nz-tooltip nzTooltip nzTooltipPlacement="right" nzTooltipTitle="Назад к документу"
+            class="ant-btn-icon-only" nz-button nzType="primary" nzSize="large" nzShape="circle">
+            <span nz-icon nzType="arrow-left" nzTheme="outline"></span>
+        </button>
+        <button nz-tooltip nzTooltip nzTooltipPlacement="right" nzTooltipTitle="Сохранить" class="ant-btn-icon-only"
+            nz-button nzType="primary" nzSize="large" nzShape="circle">
+            <span class="flex" nz-icon nzType="download" nzTheme="outline"></span>
+        </button>
+        <nz-upload nzAction="https://www.mocky.io/v2/5cc8019d300000980a055e76">
+            <button nz-tooltip nzTooltip nzTooltipPlacement="right" nzTooltipTitle="Загрузить" class="ant-btn-icon-only"
+                nz-button nzType="primary" nzSize="large" nzShape="circle">
+                <span nz-icon nzType="upload" nzTheme="outline"></span>
+            </button>
+        </nz-upload>
+        <button [nzLoading]="fakeSave" (click)="save()" nz-tooltip nzTooltip nzTooltipPlacement="right" nzTooltipTitle="Сохранить" class="ant-btn-icon-only"
+            nz-button nzType="primary" nzSize="large" nzShape="circle">
+            <span nz-icon nzType="save" nzTheme="outline"></span>
+        </button>
+    </div>
+    <div [ngClass]="{'hidden':editMode}" class="bg-red-400 relative flex-0 xl:block w-[82ch] shadow-xl">
+        <div class=" bg-white absolute h-full overflow-y-scroll overflow-x-auto top-0 pt-8 left-0 px-10">
+            <!-- <app-user-badge></app-user-badge> -->
+            <markdown class="block h-full prose" [clipboardButtonTemplate]="buttonTemplate" katex emoji mermaid
+                clipboard [data]="markdown"></markdown>
+        </div>
+    </div>
+    <div [ngClass]="{'hidden':!editMode}" class="flex-1 max-w-3xl xl:block mx-6 shadow-xl" *ngIf="editMode">
+        <textarea style="height: 100%" [(ngModel)]="markdown" nz-input
+            class="resize-none text-[1.1rem] pb-60 pl-3"></textarea>
+    </div>
+    <ng-template #buttonTemplate>
+        <button nz-tooltip nzTooltip nzTooltipPlacement="right" nzTooltipTitle="Копировать"
+            class="ant-btn-icon-only p-0" nz-button nzShape="circle">
+            <div nz-icon nzType="copy" nzTheme="outline"></div>
+        </button>
+    </ng-template>
 </div>
