--- a/NGenieBack/ng-client/src/app/app.component.html
+++ b/NGenieBack/ng-client/src/app/app.component.html
@@ -1,8 +1,8 @@
 <nz-layout>
   <app-navbar></app-navbar>
-  <nz-content class="grow relative">
-    <div class="absolute w-full h-full top-0 left-0">
-      <app-document></app-document>
+  <nz-content class="grow ">
+    <div class=" w-full h-full">
+      <router-outlet></router-outlet>
     </div>
   </nz-content>
 </nz-layout>
