--- a/NGenieBack/ng-client/src/app/document-view/document-view.component.html
+++ b/NGenieBack/ng-client/src/app/document-view/document-view.component.html
@@ -1,3 +1,4 @@
+
 <nz-breadcrumb class="my-5 mx-6 text-black" nzSeparator=">">
     <nz-breadcrumb-item class="">
         <span class="inline-block" nz-icon nzType="home"></span>
@@ -21,16 +22,12 @@
         </span>
     </nz-breadcrumb-item>
 </nz-breadcrumb>
-
-
-<div *ngIf="document" class="flex flex-col md:flex-row h-full py-4 gap-2 xl:gap-4 bg-sky-100">
-    <!-- Кнопочки -->
-    <div class="bg-white h-fit p-2 rounded-tr-2xl rounded-br-2xl flex flex-grow-0 w-fit md:flex-col gap-1">
-
-        <a [routerLink]="['/doc', id]">
+<div class="flex flex-col md:flex-row">
+    <div class="bg-white mb-2 md:sticky top-32 h-fit p-2 rounded-tr-2xl rounded-br-2xl flex flex-grow-0 w-fit mr-2 md:flex-col gap-1">
+        <a [routerLink]="['/doc/edit', id]">
             <button nz-tooltip nzTooltip nzTooltipPlacement="right" nzTooltipTitle="Назад к документу"
                 class="ant-btn-icon-only" nz-button nzType="primary" nzSize="large" nzShape="circle">
-                <span nz-icon nzType="arrow-left" nzTheme="outline"></span>
+                <span nz-icon nzType="edit" nzTheme="outline"></span>
             </button>
         </a>
         <button nz-tooltip nzTooltip nzTooltipPlacement="right" nzTooltipTitle="Сохранить" class="ant-btn-icon-only"
@@ -43,34 +40,15 @@
                 <span nz-icon nzType="upload" nzTheme="outline"></span>
             </button>
         </nz-upload>
-        <button [nzLoading]="saving" (click)="save()" nz-tooltip nzTooltip nzTooltipPlacement="right" nzTooltipTitle="Сохранить" class="ant-btn-icon-only"
-            nz-button nzType="primary" nzSize="large" nzShape="circle">
-            <span nz-icon nzType="save" nzTheme="outline"></span>
-        </button>
     </div>
-    <div [ngClass]="{'hidden':editMode}" class="bg-red-400 relative flex-0 xl:block w-[82ch] shadow-xl">
-        <div class=" bg-white absolute h-full w-full overflow-y-scroll overflow-x-auto top-0 pt-8 left-0 px-10">
-            <!-- <app-user-badge></app-user-badge> -->
-            <markdown class="block h-full prose" [clipboardButtonTemplate]="buttonTemplate" 
-                [data]="document.text">
-                katex 
-                emoji 
-                mermaid
-                clipboard 
-            </markdown>
-        </div>
+
+    <div class="px-6 py-12 bg-white shadow-xl shadow-slate-700/10 ring-1 ring-gray-900/5 md:max-w-3xl md:mx-auto lg:max-w-4xl lg:pt-16 lg:pb-28">
+            <div class="max-w-prose mx-auto lg:text-lg">
+                <app-user-badge></app-user-badge>
+                <article class="mt-3 my-prose prose">
+                    <markdown katex emoji mermaid [data]="document.text"></markdown>
+                </article>
+            </div>
     </div>
-    <div [ngClass]="{'hidden':!editMode}" class="flex-1 max-w-3xl xl:block mx-6 shadow-xl">
-        <textarea style="height: 100%" 
-            [(ngModel)]="document.text" 
-            nz-input
-            class="resize-none text-[1.1rem] pb-60 pl-3">
-        </textarea>
-    </div>
-    <ng-template #buttonTemplate>
-        <button nz-tooltip nzTooltip nzTooltipPlacement="right" nzTooltipTitle="Копировать"
-            class="ant-btn-icon-only p-0" nz-button nzShape="circle">
-            <div nz-icon nzInc nzType="copy" nzTheme="outline"></div>
-        </button>
-    </ng-template>
 </div>
+
