--- a/NGenieBack/ng-client/src/app/document/document.component.html
+++ b/NGenieBack/ng-client/src/app/document/document.component.html
@@ -52,11 +52,11 @@
         <div class=" bg-white absolute h-full w-full overflow-y-scroll overflow-x-auto top-0 pt-8 left-0 px-10">
             <!-- <app-user-badge></app-user-badge> -->
             <markdown class="block h-full prose" [clipboardButtonTemplate]="buttonTemplate" 
-                [data]="document.text">
+                [data]="document.text"
                 katex 
                 emoji 
                 mermaid
-                clipboard 
+                clipboard>
             </markdown>
         </div>
     </div>
