--- a/NGenieBack/ng-client/src/app/app.component.html
+++ b/NGenieBack/ng-client/src/app/app.component.html
@@ -1,9 +1,7 @@
 <nz-layout>
   <app-navbar></app-navbar>
-  <nz-content class="grow ">
-    <div class=" w-full h-full">
+  <nz-content class="min-h-screen">
       <router-outlet></router-outlet>
-    </div>
   </nz-content>
 </nz-layout>
 
