--- a/NGenieBack/ng-client/src/app/document-view/document-view.component.html
+++ b/NGenieBack/ng-client/src/app/document-view/document-view.component.html
@@ -22,7 +22,7 @@
         </span>
     </nz-breadcrumb-item>
 </nz-breadcrumb>
-<div class="flex flex-col md:flex-row">
+<div *ngIf="document" class="flex flex-col md:flex-row h-full">
     <div class="bg-white mb-2 md:sticky top-32 h-fit p-2 rounded-tr-2xl rounded-br-2xl flex flex-grow-0 w-fit mr-2 md:flex-col gap-1">
         <a [routerLink]="['/doc/edit', id]">
             <button nz-tooltip nzTooltip nzTooltipPlacement="right" nzTooltipTitle="Назад к документу"
@@ -41,13 +41,10 @@
             </button>
         </nz-upload>
     </div>
-
-    <div class="px-6 py-12 bg-white shadow-xl shadow-slate-700/10 ring-1 ring-gray-900/5 md:max-w-3xl md:mx-auto lg:max-w-4xl lg:pt-16 lg:pb-28">
-            <div class="max-w-prose mx-auto lg:text-lg">
+    <div class="px-6 py-12 bg-white shadow-xl w-full shadow-slate-700/10 mt-0 ring-gray-900/5 md:max-w-3xl md:mx-auto lg:max-w-4xl lg:pt-16 lg:pb-28 my-20 min-h-[75vh]">
+            <div class="max-w-prose mx-auto">
                 <app-user-badge></app-user-badge>
-                <article class="mt-3 my-prose prose">
-                    <markdown katex emoji mermaid [data]="document.text"></markdown>
-                </article>
+                <markdown class="prose lg:text-lg w-prose" katex emoji mermaid [data]="document.text"></markdown>
             </div>
     </div>
 </div>
