--- a/NGenieBack/ng-client/src/app/document/document.component.html
+++ b/NGenieBack/ng-client/src/app/document/document.component.html
@@ -23,7 +23,7 @@
 </nz-breadcrumb>
 
 
-<div *ngIf="document" class="flex flex-col md:flex-row h-full py-4 gap-2 xl:gap-4 bg-sky-100">
+<div *ngIf="document" class="flex flex-col md:flex-row h-full py-4 gap-2 xl:gap-4 min-h-[80vh]">
     <!-- Кнопочки -->
     <div class="bg-white h-fit p-2 rounded-tr-2xl rounded-br-2xl flex flex-grow-0 w-fit md:flex-col gap-1">
 
