--- a/NGenieBack/ng-client/src/app/document/document.component.html
+++ b/NGenieBack/ng-client/src/app/document/document.component.html
@@ -27,7 +27,7 @@
     <!-- Кнопочки -->
     <div class="bg-white h-fit p-2 rounded-tr-2xl rounded-br-2xl flex flex-grow-0 w-fit md:flex-col gap-1">
 
-        <a [routerLink]="['/doc', id]">
+        <a [routerLink]="['/doc', document.id]">
             <button nz-tooltip nzTooltip nzTooltipPlacement="right" nzTooltipTitle="Назад к документу"
                 class="ant-btn-icon-only" nz-button nzType="primary" nzSize="large" nzShape="circle">
                 <span nz-icon nzType="arrow-left" nzTheme="outline"></span>
