--- a/NGenieBack/ng-client/src/app/document-view/document-view.component.html
+++ b/NGenieBack/ng-client/src/app/document-view/document-view.component.html
@@ -24,7 +24,7 @@
 </nz-breadcrumb>
 <div *ngIf="document" class="flex flex-col md:flex-row h-full">
     <div class="bg-white mb-2 md:sticky top-32 h-fit p-2 rounded-tr-2xl rounded-br-2xl flex flex-grow-0 w-fit mr-2 md:flex-col gap-1">
-        <a [routerLink]="['/doc/edit', id]">
+        <a [routerLink]="['/doc/edit', document.id]">
             <button nz-tooltip nzTooltip nzTooltipPlacement="right" nzTooltipTitle="Редактировать"
                 class="ant-btn-icon-only" nz-button nzType="primary" nzSize="large" nzShape="circle">
                 <span nz-icon nzType="edit" nzTheme="outline"></span>
