--- a/NGenieBack/ng-client/src/app/navbar/navbar.component.html
+++ b/NGenieBack/ng-client/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
   <div>
     <div class="bg-white flex-row flex items-end z-50 sticky top-0 w-full px-6">
-      <p class="flex-none text-black text-2xl mb-3">Название сайта</p>
+      <p class="flex-none text-black text-2xl mb-3">Учис салага</p>
       <div class="flex-1">
         <ul nz-menu nzMode="horizontal" class="hidden sm:block ">
           <li nz-menu-item nzSelected>
@@ -14,21 +14,12 @@
           </li>
         </ul>
       </div>
-      <nz-avatar class="bg-sky-400 my-2" nzIcon="user" [nzSize]="40"
-        nzSrc="https://bipbap.ru/wp-content/uploads/2022/11/1652235714_41-kartinkin-net-p-prikolnie-kartinki-dlya-stima-44.jpg"></nz-avatar>
-    </div>
-    <div>
-      <ul nz-menu nzMode="horizontal" class="block sm:hidden">
-        <li nz-menu-item nzSelected>
-          Предметы
-        </li>
-        <li nz-menu-item>
-          Задачи
-        </li>
-        <li nz-menu-item>
-          Лекции
-        </li>
+    <nz-dropdown-menu #menu="nzDropdownMenu">
+      <ul *ngIf="user" nz-menu nzSelectable>
+        <li (click)="logout()" nz-menu-item>Выйти</li>
       </ul>
+    </nz-dropdown-menu>
+      <nz-avatar nz-dropdown [nzDropdownMenu]="menu" nzPlacement="bottomRight" nz-tooltip [nzTooltipTitle]="user ? user.lastName + ' ' + user.firstName : ''" class="bg-sky-600 my-2" nzIcon="user" [nzSize]="40"
+        [nzSrc]="user?.avatar ?? ''"></nz-avatar>
     </div>
-
   </div>
